--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 * {
-    color: blue;
+    color: #000;
+}
+
+#profile {
+    height: 200px;
+    width: 150px;
+}
+
+img {
+    height: 150px;
+    width: 200px;
+}
+
+.work {
+    background-color: bisque;
 }
