--- a/style.css
+++ b/style.css
@@ -22,11 +22,6 @@ a {
     text-decoration: none;
 }
 
-header,
-nav {
-    background-color: var(--akaroa);
-}
-
 /* Header */
 header {
     display: inline;
@@ -39,8 +34,14 @@ h1 {
     z-index: 2;
 }
 
+ul {
+    display: inline;
+}
+
 /* Navigation bar is fixed to stop of screen */
 nav {
+    background-color: var(--akaroa);
+    display: flex;
     position: fixed;
     border-bottom: 2px solid black;
     z-index: 1;
@@ -55,7 +56,6 @@ nav a {
     position: relative;
     top: 5px;
     margin: 5px;
-    text-decoration: none;
     color: black;
 }
 
@@ -140,72 +140,71 @@ nav a:visited {
     right: 36px;
 }
 
-/* Work */
-
-/* Background color spanish white */
-#my-work, 
-.my-work div, 
-.work, 
-.work h2, 
-.work p {
-    background-color: var(--spanish-white);
-    color: var(--shakespeare);
+.headings {
+    font-size: 2em;
 }
 
-#my-work {
+/* Projects */
+/* Background color spanish white */
+#projects {
+    background-color: var(--spanish-white);
+    color: var(--shakespeare);
     width: 100%;
     height: 100vh;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
 /* Each Project Square */
-.work {
-    width: 350px;
-    height: max-content;
-    border: 5px solid var(--shakespeare);
-    border-radius: 10%;
+.project-card {
+    width: 700px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
 }
 
-.work h2 {
-    text-align: left;
-    font-size: 1.3em;
-    text-decoration: none;
+.featured-project {
+    text-align: right;
+    margin: 10px;
+}
+.project-title {
+    font-size: 2em;
+    text-align: right;
+    margin: 10px;
+}
+
+.project-image {
+    height: 200px;
+    width: 300px;
     position: relative;
-    top: 90px;
-    padding-left: 4px;
-    color: var(--shakespeare);
+    bottom: 125px;
+    z-index: 0;
 }
 
-/* When visited a link, the link remain the blue font color */
-.work a:visited {
-    color: var(--shakespeare);
-}
-
-/* Each image of projects */
-.work img {
-    height: 170px;
-    width: 220px;
-    border-radius: 10%;
-    position: relative;
-    left: 185px;
+.project-description {
+    color: var(--akaroa);
+    background-color: var(--hippie-blue);
+    align-items: flex-end;
+    text-align: right;
+    padding: 20px;
     z-index: 1;
 }
 
-.work img:hover {
-    height: 180px;
-    width: 230px;
-    transition-duration: 1s;
+.project-tech-list {
+    text-align: right;
+}
+.project-tech-list li {
+    display: inline;
+    list-style: none;
+    padding: 5px;
+    margin: 2px;
 }
 
-.language-used {
-    text-align: left;
-    display: block;
-    position: relative;
-    bottom: 85px;
-    padding-left: 4px;
+.github {
+    text-align: right;
+    margin: 5px;
 }
 
 /*Contact in the footer */
